Removning orphaned mixin, adding IE overflow bug fix for the username menu, and misc cleanup

--- a/console/app/assets/stylesheets/console/_mixins.scss
+++ b/console/app/assets/stylesheets/console/_mixins.scss
@@ -2,9 +2,6 @@
   background-color: #e5e5e5;
 }
 
-@mixin console_background_ie9 {
-}
-
 @mixin navbar_background {
 }
 
