--- a/console/app/assets/stylesheets/console/_navbar.scss
+++ b/console/app/assets/stylesheets/console/_navbar.scss
@@ -104,6 +104,7 @@
           text-overflow: ellipsis;
           text-transform: none;
           white-space: nowrap;
+          word-wrap: normal;
           &:after {
             border: 3px solid transparent;
             border-bottom-width: 0;
@@ -151,7 +152,6 @@
         padding: 20px;
         text-align: left;
         transition: all 0.092s ease-in 0s;
-        z-index: 9998;
         &:before {
           border: 7px solid transparent;
           border-bottom-color: #e9e9e9;
@@ -181,7 +181,7 @@
         > li {
           margin: 0;
           + li {
-          margin-top: 8px;
+            margin-top: 8px;
           }
         }
       }
